--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -86,12 +86,12 @@ width: 150px;
 .app__navbar-smallscreen_links li:hover{
 color:var(--color-white)
 }
-@media screen and (max-width: 2000){
+@media screen and (min-width: 2000px){
   .app__navbar-login img{
     width: 210px;
   }  
 }
-@media screen and (max-width: 1150px) {
+@media screen and (max-width: 990px) {
     .app__navbar-links{
         display: none;
     }
@@ -112,6 +112,18 @@ color:var(--color-white)
     }
    
 } 
+@media screen and (max-width: 300px){
+    .app__navbar{
+        padding: 1rem;
+    }
+    .app__navbar-login{
+        display: none;
+    }
+    .app__navbar-login img{
+        width: 110px;
+    }
+   
+}
 
 
 
